# LandessDevCore

./: CMakeLists.txt  LICENSE  LandessDevCore.h  LandessDevCore.hpp  README.md  main.cpp
Algorithms/: Abs.hpp  AddAll.hpp  Base64Encoding.h  Benchmark.hpp  BubbleTargeter.h  CTREImmutableExtension.hpp  Calculus.h  CelLog2.hpp  ChannelAccessor.h  CompileTimeControlFlow.h  CompileTimeControlFlow.hpp  CompileTimeOperations.h  CompileTimeOperations.hpp  ComplimentGenerator.h  DecimalToBinary.h  Distance.hpp  DynamicProgramming.cpp  DynamicProgramming.hpp  ExecutionContext.h  Exponential.h  Exponential.hpp  FastAbs.hpp  FastLog10.hpp  Fibonnaci.hpp  Floor.hpp  Forward.hpp  FromJSON.hpp  FromString.hpp  FullAdder.hpp  FuzzySearch.h  GaussianElimination.h  GenericResize.h  GetDecimalPlaces.hpp  GetQueueType.h  Invoke.hpp  IsNan.hpp  KarnaughMap.h  Kissfft.h  LaplaceTransform.h  Move.hpp  (+25 more)
Async/: AnyOf.hpp  AsyncRingBuffer.hpp  CallStack.hpp  Channel.hpp  Commitment.h  ConcurrentStack.h  ConcurrentVector.h  Connect.hpp  Execute.hpp  Future.h  GrandCentralDispatch.h  HazardManager.hpp  HazardPointer.h  Just.hpp  Let.hpp  LockFreeList.h  Promise.h  ReaderWriterQueue.h  RingBuffer.h  ScheduleAfter.hpp  Scheduler.hpp  Semaphore.h  SharedState.hpp  Strand.hpp  SyncWait.hpp  TaskGroup.h  Then.hpp  Thread.cpp  Thread.h  ThreadAffinity.cpp  ThreadAffinity.h  ThreadPool.h  WhenAll.hpp  WhenAllPredicate.hpp  WhenAny.hpp  WhenOnlyPredicate.hpp  WhenPredicate.hpp  blockingconcurrentqueue.h  concurrentqueue.h  coroutine.cpp  (+4 more)
Chrono/: DateTime.h  Timer.cpp  Timer.h
Core/: CompileTimeHashMap.h  CompileTimeMap.hpp  HeteregenousTuple.h  HeteregenousTuple.hpp  NullClass.hpp  RequestResponse.hpp  Tuple.hpp  Unit.hpp
Datastructures/: Tree.hpp
Definitions/: Common.h  Common.hpp  Float.h  Integer.hpp  PDPUnits.h  PDPUnits.hpp  TimeExtension.h  TimeExtension.hpp
Encryption/: Base64.hpp  Blowfish.hpp  Cbc.hpp  Certificate.cpp  Certificate.hpp  Crypt.hpp  Ctr.hpp  R5.hpp  R6.hpp  RSA.hpp  Saferp.hpp
Examples/: AlgorithmicJSONTest.cpp  AlgorithmicJSONTest.h  ApplicationLoopExample.cpp  ApplicationLoopExample.h  AsyncExample.cpp  AsyncExample.hpp  CPUMetric.h  CalculusExample.cpp  CalculusExample.hpp  ConstexprMapExample.cpp  ConstexprMapExample.hpp  DelimeterSeperateFileExample.cpp  DelimeterSeperatedFileExample.h  DependencyInjectionExample.cpp  DependencyInjectionExample.hpp  DeploymentExample.cpp  DeploymentExample.hpp  FibonnaciExample.cpp  FibonnaciExample.h  FiniteStateMachineExample.cpp  FiniteStateMachineExample.hpp  FullAdderExample.cpp  FullAdderExample.hpp  IMGUIExample1.cpp  IMGUIExample1.h  IMGUIExample2.cpp  IMGUIExample2.h  IOExample.cpp  IOExample.hpp  MultithreadingExample.cpp  MultithreadingExample.hpp  NDExample.h  NDPExample.cpp  PVEGUIDeploymentExample.cpp  PVEGUIDeploymentExample.h  PublisherSubscriberExample.cpp  PublisherSubscriberExample.h  ReflectionDemoTypes.h  ReflectionExample.cpp  ReflectionExample.h  (+18 more)
Exceptions/: BluetoothException.h  EmptyHeapException.cpp  EmptyHeapException.h  EmptyQueueException.cpp  EmptyQueueException.h  EmptyStackException.cpp  EmptyStackException.h  Exception.cpp  Exception.h  IndexOutOfBoundsException.cpp  IndexOutOfBoundsException.h  InvalidOperationException.cpp  InvalidOperationException.h  MemoryException.cpp  MemoryException.h  NoSuchElementException.cpp  NoSuchElementException.h  OutOfThreadsException.cpp  OutOfThreadsException.h  OverFlowException.cpp  OverFlowException.h  UnderFlowException.cpp  UnderFlowException.h
Functor/: Delegate.h  FastDelegate.h  FunctionView.h  Lambda.h  LightWeightDelegate.h  LightWeightDelegateBase.h  fixed_size_function.hpp
Game/: Artillery.h  Battleship.h  BubbleTargeter.hpp  Chess.h  LabrynthGenerator.h  MemoryBridge.h  Minesweeper.h  Pegboard.h  Pegboard.hpp  Puzzler.h  Sudoku.h  Tetris.h  TicTacToe.h
Geometry/: BezierCurve.h  Box.h  Capsule.h  Circle.h  Cube.h  Line.h  LineSegment.h  Particle.h  Plane.h  Ray.h  Rectangle.h  Sphere.h  Square.h  UniformBSpline.h
IO/: Archiver.hpp  BMPHeader.h  BasicDelimeterSeperatedFile.h  CSVParser.hpp  CachedDatabase.h  ConnectionBroker.hpp  DHTBackend.hpp  DataLink.hpp  DataLinkManager.hpp  Database.hpp  Database1.h  DatabaseEntity.h  DatabaseOpenMode.h  DatabaseOperationResult.h  EphemiralRowBackingStore.hpp  EtcdBackingStore.h  FetchRequest.h  File.hpp  InsertionRequest.h  JSONRowBackingStore.h  JsonDatabaseBackend.h  PublisherSubscriber.h  RedisBackend.h  RocksBackingStore.h  RowBackingStore.h  S3DatabaseBackend.h  SystemLoad.hpp  TieredDatabase.h  UnqliteDatabaseBackend.h  path.h  toml.hpp
IaaS/: ArtifactRepository.hpp  BasicCluster.hpp  ClusteringMetaData.hpp  Container.hpp  DockerManifest.hpp
MVC/: Cusor.h  FormattedFloatingPoint.h  FormattedFloatingPoint.hpp  LinearAlgebraRenderable.h  LinearAlgebraRenderable.hpp  Mouse.h  Mouse.hpp  MultiTenantApplication.hpp  Renderable.h  Renderable.hpp  RenderableConcept.h  RenderableConcept.hpp  RenderingContext.hpp  Scheduling.h  Scheduling.hpp  SchedulingEvent.h  SchedulingEvent.hpp  SchedulingQuittingPredicate.h  SchedulingQuittingPredicate.hpp  ScopedRenderContextState.hpp  TermBoxApplication.cpp  TermBoxApplication.h  TermBoxApplication.hpp  TermBoxButton.hpp  TermBoxCheckBox.h  TermBoxCheckBox.hpp  TermBoxCheckBoxBar.hpp  TermBoxConsoleApplication.cpp  TermBoxConsoleApplication.h  TermBoxConsoleApplication.hpp  TermBoxCursorNavigator.h  TermBoxCursorNavigator.hpp  TermBoxEnumerations.h  TermBoxEnumerations.hpp  TermBoxImmutableLabel.h  TermBoxImmutableLabel.hpp  TermBoxImmutableTextArea.h  TermBoxImmutableTextArea.hpp  TermBoxLogger.hpp  TermBoxMenu.h  (+8 more)
Memory/: AlignedStorage.h  AutomaticReferenceCounting.cpp  AutomaticReferenceCounting.h  Comparison.h  CorePrimitiveAllocator.hpp  ElementReference.h  FreeList.h  FreeListAllocator.cpp  FreeListAllocator.h  FreeListPolicies.h  LinearAllocator.cpp  LinearAllocator.h  MemoryResource.hpp  Optional.h  OptionalReference.h  PolyMorphicAllocator.hpp  PoolAllocator.cpp  PoolAllocator.h  StackAllocator.cpp  StackAllocator.hpp  UniquePointer.h  shared_ptr.hpp
PF/: Age.hpp  (+8 more)
(+526 files in other folders)
